--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -1,8 +1,7 @@
 #contact {
   margin: auto;
-  padding-top: 100px;
+  padding-top: 0;
   padding-bottom: 20px;
-  height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
