--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -10,7 +10,8 @@
 
 #contact p {
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 #contact .title {
@@ -50,5 +51,9 @@
 @media only screen and (max-width: 600px) {
   #contact .title {
     font-size: 3rem;
+  }
+
+  #contact p {
+    font-size: 15px;
   }
 }
