--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 .main {
-  background-color: #232f34;
+  background-color: #212121;
   width: 100%;
   height: calc(100vh - 64px);
   display: flex;
